[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/table/table.png" type="Texture" id=1]
[ext_resource path="res://assets/Audio/Paper.mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/slots/VSlotCollection.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/slots/Slot.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Drawer/Tasks/task_no_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/Drawer/TasksHover/task_with_hover.png" type="Texture" id=8]
[ext_resource path="res://scripts/BossTable.gd" type="Script" id=9]

[sub_resource type="GDScript" id=3]

[node name="BossTable" type="Node2D"]
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 624.0
texture = ExtResource( 1 )

[node name="taskNoHover" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 642 )
texture = ExtResource( 7 )
script = SubResource( 3 )

[node name="TextureButton" type="TextureButton" parent="taskNoHover"]
margin_left = -240.0
margin_top = -56.0
margin_right = 240.0
margin_bottom = 24.0
texture_hover = ExtResource( 8 )

[node name="SlotCollectioVBoxContainer" parent="." instance=ExtResource( 3 )]
margin_left = -3.0
margin_top = 95.0
margin_right = 509.0
margin_bottom = 625.0
rect_min_size = Vector2( 512, 530 )
custom_constants/separation = 36
collection_size = Vector2( 512, 530 )

[node name="ProfileControl2" parent="SlotCollectioVBoxContainer" instance=ExtResource( 6 )]
margin_right = 517.0
margin_bottom = 230.0
grow_horizontal = 2
rect_min_size = Vector2( 517, 230 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 4
location = 2
slot_type = 1
slot_size = Vector2( 517, 230 )
images_size = Vector2( 420, 230 )

[node name="WorkerTableControl2" parent="SlotCollectioVBoxContainer" instance=ExtResource( 6 )]
margin_top = 266.0
margin_right = 517.0
margin_bottom = 530.0
rect_min_size = Vector2( 517, 250 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 4
location = 2
slot_size = Vector2( 517, 250 )
images_size = Vector2( 436, 264 )

[node name="TaskSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -3, 375 )
stream = ExtResource( 2 )

[connection signal="mouse_entered" from="taskNoHover/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="taskNoHover/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="get_item" from="SlotCollectioVBoxContainer/ProfileControl2" to="." method="_on_ProfileControl2_get_item"]
[connection signal="get_item" from="SlotCollectioVBoxContainer/WorkerTableControl2" to="." method="_on_WorkerTableControl2_get_item"]
